[UIMA-736]
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk/uimaj-core@617208 13f79535-47bb-0310-9956-ffa450edef68